--- a/app/src/main/res/layout/item_musica.xml
+++ b/app/src/main/res/layout/item_musica.xml
@@ -1,60 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardBackgroundColor="#FFFFFF"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="5dp">
-    <!--    tools:showIn="@layout/main_fragment">-->
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_margin="4dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5dp">
+        <!--    tools:showIn="@layout/main_fragment">-->
 
-        <TextView
-            android:id="@+id/tv_number"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_oval"
-            android:elevation="4dp"
-            android:padding="6dp"
-            tools:text="1"
+            android:layout_margin="12dp"
             android:gravity="center"
-            android:textAlignment="center"
-            android:autoSizeMinTextSize="6dp"
-            android:autoSizeMaxTextSize="14dp"
-            android:autoSizeTextType="uniform"
-            android:textSize="14dp"
-            android:lines="1"
-            android:textColor="#FFFFFF"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:autoSizeMaxTextSize="14dp"
-            android:autoSizeMinTextSize="6dp"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:maxLines="2"
-            android:textAlignment="center"
-            android:textColor="#000"
-            android:textSize="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_number"
-            tools:text="Highway to Hell" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvNumber"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:autoSizeMaxTextSize="14dp"
+                android:autoSizeMinTextSize="6dp"
+                android:autoSizeTextType="uniform"
+                android:background="@drawable/bg_oval"
+                android:elevation="4dp"
+                android:gravity="center"
+                android:lines="1"
+                android:padding="6dp"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="14dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="1" />
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:autoSizeMaxTextSize="14dp"
+                android:autoSizeMinTextSize="6dp"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:maxLines="2"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="14dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvNumber"
+                tools:text="Highway to Hell" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</layout>
