--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -260,6 +260,39 @@
                         android:textColor="#fff"
                         tools:text="Deeplink"/>
 
+                    <Button
+                        style="@style/DefaultButton"
+                        android:id="@+id/button13"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_columnWeight="1"
+                        android:layout_rowWeight="1"
+                        android:backgroundTint="@color/blue_500"
+                        android:textColor="#fff"
+                        tools:text="Deeplink"/>
+
+                    <Button
+                        style="@style/DefaultButton"
+                        android:id="@+id/button14"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_columnWeight="1"
+                        android:layout_rowWeight="1"
+                        android:backgroundTint="#F57C00"
+                        android:textColor="#fff"
+                        tools:text="Deeplink"/>
+
+                    <Button
+                        style="@style/DefaultButton"
+                        android:id="@+id/button15"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:layout_columnWeight="1"
+                        android:layout_rowWeight="1"
+                        android:backgroundTint="#F57C00"
+                        android:textColor="#fff"
+                        tools:text="Deeplink"/>
+
                 </GridLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
